--- a/index.html
+++ b/index.html
@@ -12,9 +12,235 @@
 </head>
 
 <body>
-    <h2>This is panda khali khai anda</h2>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Bag's</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Subscribe</a>
+                        </li>
 
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- slider -->
+        <section class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info rounded ">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>
+                                    Cool Dude Headphone
+                                </h1>
+                                <p>This is the best headphone ever in the world pepole who just want waste his time
+                                    recommendec to buy. </p>
+                                <h1>$380</h1>
+                                <button class="btn btn-warning">Buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
 
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>
+                                    X-box for living room
+                                </h1>
+                                <p>This is the best X-box ever in the world pepole who just want waste his time
+                                    recommendec to buy. </p>
+                                <h1>$480</h1>
+                                <button class="btn btn-warning">Buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex align-items-center p-5">
+                            <div class="col-lg-7">
+                                <h1>
+                                    Mega LCD TV For Sports
+                                </h1>
+                                <p>This is the best TV ever in the world pepole who just want waste his time
+                                    recommendec to buy. </p>
+                                <h1>$1480</h1>
+                                <button class="btn btn-warning">Buy now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+
+    <main>
+        <section class="container">
+
+            <div class="row g-4 my-5 ">
+                <div class="col-sm-12 col-md-6 col-lg-4  ">
+                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between bg-warning ">
+                        <h1 class="text-white">Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 ">
+                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between bg-info ">
+                        <h1 class="text-white">Bag's</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 ">
+                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between bg-warning ">
+                        <h1 class="text-white">Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- --Shoes-- -->
+        <section class="container">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body border-0">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a casual shoe with supportings a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <h4>$220</h4>
+                            <button class="btn btn-warning">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike</h5>
+                            <p class="card-text">This is a casual shoe with supportings a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <h4>$320</h4>
+                            <button class="btn btn-warning">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This is a casual shoe with supportings a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <h4>$420</h4>
+                            <button class="btn btn-warning">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- -Bags -->
+
+        <section class="container mt-5">
+            <h2>Backpack</h2>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body border-0">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h4>$120</h4>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+
+                            <button class="btn btn-warning">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h4>$320</h4>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <div class="m-3">
+
+                            <button class="btn btn-warning">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h4>$320</h4>
+                            <p class="card-text">This is a casual shoe with supportings a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+
+                            <button class="btn btn-warning">Buy Now>></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
