--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- custom css -->
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="" class="d-inline-block align-text-top"></a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,13 +32,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#Shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Bag's</a>
+                            <a class="nav-link" href="#Bag's">Bag's</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
 
                     </ul>
@@ -44,8 +49,8 @@
         <section class="container">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active bg-info rounded ">
-                        <div class="row d-flex align-items-center p-5">
+                    <div class="carousel-item active p-5 panda-bg-info">
+                        <div class="row d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     Cool Dude Headphone
@@ -53,7 +58,7 @@
                                 <p>This is the best headphone ever in the world pepole who just want waste his time
                                     recommendec to buy. </p>
                                 <h1>$380</h1>
-                                <button class="btn btn-warning">Buy now</button>
+                                <button class="btn btn-warning buy-button">Buy now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -62,7 +67,7 @@
                         </div>
 
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item panda-bg-info ">
                         <div class="row d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>
@@ -71,14 +76,14 @@
                                 <p>This is the best X-box ever in the world pepole who just want waste his time
                                     recommendec to buy. </p>
                                 <h1>$480</h1>
-                                <button class="btn btn-warning">Buy now</button>
+                                <button class="btn btn-warning buy-button">Buy now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item panda-bg-info ">
                         <div class="row d-flex align-items-center p-5">
                             <div class="col-lg-7">
                                 <h1>
@@ -87,7 +92,7 @@
                                 <p>This is the best TV ever in the world pepole who just want waste his time
                                     recommendec to buy. </p>
                                 <h1>$1480</h1>
-                                <button class="btn btn-warning">Buy now</button>
+                                <button class="btn btn-warning buy-button">Buy now</button>
                             </div>
                             <div class="col-lg-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -108,20 +113,21 @@
                 </button>
             </div>
         </section>
+
     </header>
-
     <main>
-        <section class="container">
+        <!-- categories -->
+        <section class="container my-5 categories">
 
-            <div class="row g-4 my-5 ">
+            <div class="row g-4 ">
                 <div class="col-sm-12 col-md-6 col-lg-4  ">
-                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between bg-warning ">
+                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between bg-warning">
                         <h1 class="text-white">Watch</h1>
                         <img src="images/categories/watch.png" alt="">
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 ">
-                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between bg-info ">
+                    <div class="p-3 border rounded-3 d-flex align-items-center justify-content-between black-bag">
                         <h1 class="text-white">Bag's</h1>
                         <img src="images/categories/bag.png" alt="">
                     </div>
@@ -137,10 +143,10 @@
 
         <!-- --Shoes-- -->
         <section class="container">
-            <h2>Shoes</h2>
+            <h2 id="Shoes">Shoes</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
-                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                    <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded-3">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title">Supply 350</h5>
@@ -149,12 +155,12 @@
                         </div>
                         <div class="m-3">
                             <h4>$220</h4>
-                            <button class="btn btn-warning">Buy Now>></button>
+                            <button class="btn btn-warning buy-button">Buy Now>></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
-                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                    <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded-3">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Nike</h5>
@@ -163,12 +169,12 @@
                         </div>
                         <div class="m-3">
                             <h4>$320</h4>
-                            <button class="btn btn-warning">Buy Now>></button>
+                            <button class="btn btn-warning buy-button">Buy Now>></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                    <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded-3">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Red Airmax</h5>
@@ -177,7 +183,7 @@
                         </div>
                         <div class="m-3">
                             <h4>$420</h4>
-                            <button class="btn btn-warning">Buy Now>></button>
+                            <button class="btn btn-warning buy-button">Buy Now>></button>
                         </div>
                     </div>
                 </div>
@@ -186,11 +192,11 @@
 
         <!-- -Bags -->
 
-        <section class="container mt-5">
-            <h2>Backpack</h2>
+        <section class="container my-5">
+            <h2 id="Bag's">Bag's</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
-                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                    <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded-3">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body border-0">
                             <h5 class="card-title">Red Laltu Bag</h5>
@@ -200,12 +206,12 @@
                         </div>
                         <div class="m-3">
 
-                            <button class="btn btn-warning">Buy Now>></button>
+                            <button class="btn btn-warning buy-button buy-button">Buy Now>></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4 ">
-                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                    <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded-3">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Blue Niltu Bag</h5>
@@ -215,12 +221,12 @@
                         </div>
                         <div class="m-3">
 
-                            <button class="btn btn-warning">Buy Now>></button>
+                            <button class="btn btn-warning buy-button">Buy Now>></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
-                    <div class="card h-100 border-0 shadow-lg rounded-3">
+                    <div class="card h-100 border-0 shadow p-3 mb-5 bg-body rounded-3">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Black Kaltu Bag</h5>
@@ -230,16 +236,27 @@
                         </div>
                         <div class="m-3">
 
-                            <button class="btn btn-warning">Buy Now>></button>
+                            <button class="btn btn-warning buy-button">Buy Now>></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- subscribe -->
+        <section id="Subscribe" style="height: 300px;"
+            class="container d-flex justify-content-center align-items-center panda-bg-info rounded-3">
+            <div class="">
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p class="text-muted fw-bolder">Get updates on sales, specials and more</p>
+                <input class="form-control" type=" text" name="" id="" placeholder="Comment Hare">
+                <br>
+                <button class="btn submit ">SUBMIT</button>
+            </div>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class=" mt-5 text-center">
+        <p><small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
